Fix long word causing overflow

--- a/web_ui/src/Components/Sidebar/NewLibraryModal/DirSelection.scss
+++ b/web_ui/src/Components/Sidebar/NewLibraryModal/DirSelection.scss
@@ -48,6 +48,7 @@
         user-select: none;
         overflow-wrap: break-word;
         overflow: hidden;
+        word-break: break-all;
       }
     }
   }
